crates/compiler/cypress/tests/snapshots/test_parse__expect_fx_moduledefs_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "# expecting some effects\nexpect-fx 5 == 2\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginExpectFx
            (* Num=>Int@1 InlineBinOpEquals=>OpEquals@2 Num=>Int@3 EndBinOpEquals)
        EndExpectFx)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
ExpectFx(BinOp(IntBase10("5"), Equals, IntBase10("2")))

[=== formatted below ===]

