crates/compiler/cypress/tests/snapshots/test_parse__extra_newline_in_parens_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "B:{}\n\n(\na)\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            UpperIdent=>UpperIdent@0
            InlineTypeColon=>OpColon@1
            (BeginTypeRecord EndTypeRecord)
        EndTypeOrTypeAlias)
        HintExpr
        (BeginParens Ident=>LowerIdent@5 EndParens)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(UpperIdent("B"), Record([]))
Ident("a")

[=== formatted below ===]

